new photo gallery layout

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,14 @@ nav ul li{
 	display: inline;
 	font-family: Bangla MN;
 	font-size: 15px;
+	/*text-align: center;*/
 }
 .headshot {
 	width: 150px;
 	height: auto;
 	position: center;
-	border-radius: 75px;
+	/*border-radius: 75px;*/
+	/*border: 1px solid #2F4F4F;*/
 }
 img {
 	width: 75%;
@@ -40,7 +42,8 @@ h1 {
 }
 h2{
 	font-family: Bangla MN;
-	font-size: 35px;
+	font-size: 20px;
+	/*text-align: center;*/
 	/*font-weight: bold;*/
 }
 p {
@@ -65,4 +68,21 @@ a:hover{
 section {
 	font-family: Bangla MN;
 	font-weight: bold;
+}
+
+span {
+	padding: 10px;
+	float: left;
+	width: 30%;
+}
+
+span img {
+	height: 250px;
+	width: auto;
+	border: 2px solid #2F4F4F;
+	padding: 20px;
+}
+
+#last {
+	width: 93%;
 }
